fixed top-story img link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="hero-area">
       <article class="top-story">
         <figure class="top-img">
-             <img src="img/top-story-photo.png" alt="top news photo">
+             <img src="img/opt-top-story-photo.jpg" alt="top news photo">
         </figure>
         <header>
           <h1>Wilco Announces a New Summer Tour<h1>
