--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
 
       <div class="header-wrapper">
         <figure class="logo">
-          <a href="../index.html"><img src="../img/logo.png" alt="unplugged logo"></a>
+          <a href="../index.html"><img src="../img/opt-logo.jpg" alt="unplugged logo"></a>
         </figure>
         <nav>
           <ul>
