--- a/faqs/index.html
+++ b/faqs/index.html
@@ -82,7 +82,7 @@
 
   <footer>
     <figure class="footer-logo">
-      <img src="../img/logo.png" alt="footer logo unplugged">
+      <img src="../img/opt-logo.jpg" alt="footer logo unplugged">
     </figure>
   </footer>
 
