--- a/about/index.html
+++ b/about/index.html
@@ -100,7 +100,7 @@
 
   <footer>
     <figure class="footer-logo">
-      <img src="../img/logo.png" alt="footer logo unplugged">
+      <img src="../img/opt-logo.jpg" alt="footer logo unplugged">
     </figure>
   </footer>
 
