fixed logo links

--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
 
       <div class="header-wrapper">
         <figure class="logo">
-          <a href="../index.html"><img src="../img/opt-logo.jpg" alt="unplugged logo"></a>
+          <a href="../index.html"><img src="../img/opt-logo.jpg" src="../img/opt-logo.jpg"  alt="unplugged logo"></a>
         </figure>
         <nav>
           <ul>
@@ -74,7 +74,8 @@
       <h1>Meet the Team</h1>
 
       <div class="team-member clearfix">
-        <div class="team-img" id="team-img-jack"></div>
+        <div class="team-img" id="team-img-jack">
+        </div>
           <h2 class="team-name">Jack Smith</h2>
           <p class="team-title">Editor-in-Chief</p>
           <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</p>
