--- a/faqs/index.html
+++ b/faqs/index.html
@@ -30,7 +30,7 @@
     <div class="header-wrapper">
 
       <figure class="logo">
-        <a href="../index.html"><img src="../opt-img/logo.jpg" alt="unplugged logo"></a>
+        <a href="../index.html"><img src="../img/opt-logo.jpg" alt="unplugged logo"></a>
       </figure>
 
       <nav>
